Fixed collapse menu bug for mobile, added tooltips

--- a/index.css
+++ b/index.css
@@ -519,6 +519,9 @@ td {
 		font-size: 0.8em;
 		margin-top: 20px;
 	}
+	#selectDiv {
+		display: none;
+	}
 }
 
 @media screen and (min-width: 426px) {
